# namecom

./: .bumpversion.cfg  LICENSE  MANIFEST.in  Makefile  README.rst  requirements-dev.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: api.rst  conf.py  data_model.rst  exception.rst  index.rst  result_model.rst
docs/source/: api.rst  conf.py  data_model.rst  index.rst  result_model.rst
namecom/: __init__.py  api.py  auth.py  data_models.py  exceptions.py  models.py  parse_utils.py  result_models.py
namecom/models/: __init__.py  data_models.py  response_result_models.py
namecom/tests/: sample_data.py
namecom/utils/: __init__.py  json_utils.py  parse_utils.py
tests/: __init__.py  dns_api.py  dnssec_api.py  domain_api.py  emailforwarding_api.py  exceptions.py  sample.py  sample_data.py  test_data_model.py  test_dns_api.py  test_dnssec_api.py  test_domain_api.py  test_emailforwarding_api.py  test_exceptions.py  test_transfer_api.py  test_url_forwarding_api.py  test_vanity_nameserver_api.py
