[metadata]
name = pynamecom
version = 0.1.3
author = Tianhong Chu
author-email = cthesky13@gmail.com
home-page = https://github.com/CtheSky/namecom
description = Python Library for Name.com v4 API
long_description = file: README.rst
platforms = any
keywords = name.com, namecom, api, domain name registrar
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Topic :: Internet :: Name Service (DNS)
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages = namecom
exclude = tests

[options]
zip_safe = True
install_requires = requests >= 2.18.0
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*

[bdist_wheel]
universal = true